Fix carousel alignment The buttons weren't very visible over some images, so the transparent overlay was expanded.

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -104,3 +104,8 @@ $dark-transparent: #000000c0;
 		}
 	}
 }
+
+//* XS-SM SCREENS *//
+
+@media screen and (max-width: 575px) {
+}
